--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_bloc: ^8.0.1
   rxdart: ^0.27.3
+  shared_preferences: ^2.0.13
 
 dev_dependencies:
   flutter_test:
